# graphile_worker_rs

./: .env  .gitignore  <  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  biome.json  cobertura.xml  flake.nix  issue_answer.md  justfile  renovate.json5  rust-toolchain.toml
crates/crontab_parser/: CHANGELOG.md  Cargo.toml  README.md
crates/crontab_parser/src/: lib.rs  nom_crontab.rs  nom_crontab_line.rs  nom_crontab_opts.rs  nom_crontab_timer.rs  nom_task_identifier.rs  regexes.rs  types.rs
crates/crontab_runner/: CHANGELOG.md  Cargo.toml  README.md
crates/crontab_runner/src/: backfill.rs  clock.rs  lib.rs  sql.rs  utils.rs
crates/crontab_types/: CHANGELOG.md  Cargo.toml  README.md
crates/crontab_types/src/: lib.rs
crates/ctx/: CHANGELOG.md  Cargo.toml
crates/ctx/src/: lib.rs
crates/database/: CHANGELOG.md  Cargo.toml  README.md
crates/database/src/: lib.rs  sqlx.rs  tokio_postgres.rs
crates/database/tests/: driver_contract.rs
crates/extensions/: CHANGELOG.md  Cargo.toml  README.md
crates/extensions/src/: lib.rs
crates/graphile-worker-admin-api/: CHANGELOG.md  Cargo.toml
crates/graphile-worker-admin-api/src/: defaults.rs  jobs.rs  lib.rs  maintenance.rs  overview.rs  queries.rs  responses.rs  sql.rs  tests.rs
crates/graphile-worker-admin-api/src/queries/: error.rs  mod.rs  overview.rs  workers.rs
crates/graphile-worker-admin-ui/: CHANGELOG.md  Cargo.toml  build.rs  package-lock.json  package.json  tailwind.config.cjs
crates/graphile-worker-admin-ui-client/: CHANGELOG.md  Cargo.toml
crates/graphile-worker-admin-ui-client/src/: lib.rs
crates/graphile-worker-admin-ui-client/src/wasm/: api.rs  app.rs  browser.rs  components.rs  filters.rs  mod.rs  modals.rs  types.rs
crates/graphile-worker-admin-ui/assets/: tailwind.css
crates/graphile-worker-admin-ui/prebuilt/: admin.css  admin.js  admin_ui.js  admin_ui_bg.wasm
crates/graphile-worker-admin-ui/src/: lib.rs
crates/graphile-worker-admin-ui/src/native/: assets.rs  auth.rs  error.rs  middleware.rs  mod.rs  queries.rs  routes.rs  server.rs  state.rs  types.rs  view.rs
crates/graphile-worker-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/graphile-worker-cli/src/: admin.rs  connection.rs  main.rs  output.rs  parsers.rs
crates/graphile-worker-cli/src/args/: admin.rs  jobs.rs  maintenance.rs  mod.rs
crates/graphile-worker-cli/src/commands/: admin_server.rs  maintenance.rs  mod.rs  overview.rs
crates/graphile-worker-cli/tests/: cli.rs
crates/graphile-worker-crontab-runner/: CHANGELOG.md  Cargo.toml
crates/graphile-worker-crontab-runner/src/: backfill.rs  lib.rs  sql.rs  tests.rs
crates/graphile-worker-crontab-runner/src/runner/: mod.rs  schedule.rs
crates/graphile-worker-crontab-runner/src/sql/: job.rs  known.rs  mod.rs  schedule.rs
crates/graphile-worker-ctx/: CHANGELOG.md  Cargo.toml  README.md
crates/graphile-worker-ctx/src/: builder.rs  context.rs  lib.rs  tests.rs
crates/graphile-worker-database/: CHANGELOG.md  Cargo.toml  LICENSE.md
crates/graphile-worker-database/src/: database.rs  error.rs  executor.rs  future.rs  identifier.rs  lib.rs  notification.rs  row_mapping.rs  sqlx.rs  tokio_postgres.rs
crates/graphile-worker-database/src/identifier/: keywords.rs  mod.rs  tests.rs
crates/graphile-worker-database/src/schema/: mod.rs  tests.rs
crates/graphile-worker-database/src/sqlx/: driver.rs  executor.rs  mod.rs  params.rs  rows.rs  transaction.rs
crates/graphile-worker-database/src/tokio_postgres/: executor.rs  listener.rs  mod.rs  params.rs  rows.rs  transaction.rs
crates/graphile-worker-database/src/types/: cell.rs  (+5 more)
crates/graphile-worker-database/tests/: driver_contract.rs
crates/graphile-worker-job/: CHANGELOG.md  Cargo.toml
crates/graphile-worker-job/src/: db_job.rs  job.rs  lib.rs  tests.rs
crates/graphile-worker-lifecycle-hooks/: CHANGELOG.md  Cargo.toml  README.md
crates/graphile-worker-lifecycle-hooks/src/: context.rs  erased.rs  event.rs  events.rs  lib.rs  registry.rs  result.rs
crates/graphile-worker-migrations/: CHANGELOG.md  Cargo.toml  build.rs
crates/graphile-worker-migrations-core/: CHANGELOG.md  Cargo.toml  LICENSE.md
crates/graphile-worker-migrations-core/src/: lib.rs
crates/graphile-worker-migrations-macros/: CHANGELOG.md  Cargo.toml
crates/graphile-worker-migrations-macros/src/: lib.rs
crates/graphile-worker-migrations/src/: clash.rs  error.rs  install.rs  lib.rs  pg_version.rs  runner.rs  state.rs
crates/graphile-worker-queries/: CHANGELOG.md  Cargo.toml  README.md
crates/graphile-worker-queries/src/: batch_get_jobs.rs  complete_job.rs  duration.rs  errors.rs  get_job.rs  lib.rs  recover_workers.rs  schema_names.rs  task_identifiers.rs  telemetry.rs
crates/graphile-worker-recovery/: CHANGELOG.md  Cargo.toml  README.md
crates/graphile-worker-recovery/src/: config.rs  job_recovery.rs  lib.rs  types.rs
crates/graphile-worker-runtime/: CHANGELOG.md  Cargo.toml  README.md
crates/graphile-worker-runtime/src/: lib.rs  task.rs  time.rs
crates/graphile-worker-shutdown-signal/: CHANGELOG.md  Cargo.toml  README.md
crates/graphile-worker-shutdown-signal/src/: lib.rs
crates/graphile-worker-task-details/: CHANGELOG.md  Cargo.toml
crates/graphile-worker-task-details/src/: details.rs  lib.rs  shared.rs  tests.rs
crates/graphile-worker-task-handler/: CHANGELOG.md  Cargo.toml  README.md
crates/graphile-worker-task-handler/src/: lib.rs
crates/graphile-worker-utils/: CHANGELOG.md  Cargo.toml  README.md
crates/graphile-worker-utils/src/: actions.rs  client.rs  executor.rs  lib.rs  maintenance.rs  management.rs  schedule.rs  tracing.rs  types.rs
crates/job/: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
crates/job/src/: lib.rs
crates/job_spec/: CHANGELOG.md  Cargo.toml
crates/job_spec/src/: lib.rs
crates/lifecycle_hooks/: CHANGELOG.md  Cargo.toml
crates/lifecycle_hooks/src/: context.rs  event.rs  events.rs  lib.rs  plugin.rs  registry.rs  result.rs  traits.rs
xtask/: Cargo.toml
xtask/src/: main.rs  release.rs  utils.rs
(+678 files in other folders)
