[package]
name = "archimedes"
version = "0.1.0"
edition = "2021"

[features]
default = ["runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-async-std-rustls = ["sqlx/runtime-async-std-rustls"]
runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
cargo-insta = "1.21.1"
chrono = { version = "0.4.23", features = ["serde"] }
futures = "0.3.25"
getset = "0.1.2"
num_cpus = "1.14.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
sqlx = { version = "0.6.2", features = ["postgres", "json"] }
thiserror = "1.0.37"
tracing = "0.1.37"
typed-builder = "0.11.0"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros"] }
