[package]
name = "archimedes"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*"
]

[features]
default = ["runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls", "tokio", "crontab_runner/runtime-tokio-rustls", "archimedes_migrations/runtime-tokio-rustls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls", "tokio", "crontab_runner/runtime-tokio-native-tls", "archimedes_migrations/runtime-tokio-native-tls"]
# For now we don't support async std
# runtime-async-std-rustls = ["sqlx/runtime-async-std-rustls"]
# runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]

[dependencies]
crontab_runner = { path = "./crates/crontab_runner" }
crontab_types = { path = "./crates/crontab_types" }
crontab_parser = { path = "./crates/crontab_parser" }
archimedes_migrations = { path = "./crates/migrations" }
anyhow = "1.0.66"
async-trait = "0.1.58"
cargo-insta = "1.21.1"
chrono = { version = "0.4.23", features = ["serde"] }
futures = "0.3.25"
getset = "0.1.2"
num_cpus = "1.14.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
sqlx = { version = "0.6.2", features = ["postgres", "json", "chrono"] }
thiserror = "1.0.37"
tracing = "0.1.37"
typed-builder = "0.11.0"
tokio = { version = "1.21.2", features = ["macros"], optional = true }
rand = "0.8.5"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros"] }
tracing-subscriber = "0.3.16"
