[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
description = "Archimedes helper tasks CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
derive_more = "0.99.17"
glob = "0.3.0"
itertools = "0.10.5"
once_cell = "1.16.0"
regex = "1.7.0"
serde = { version = "1.0.151", features = ["derive"] }
structstruck = "0.3.0"
toml = "0.5.10"
toml_edit = { version = "0.19.7", features = ["serde"] }
