[package]
name = "xtask"
version = "0.2.0"
edition = "2021"
description = "Archimedes helper tasks CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.2.5", features = ["derive"] }
derive_more = "0.99.17"
glob = "0.3.1"
itertools = "0.10.5"
once_cell = "1.17.1"
percent-encoding = "2.2.0"
regex = "1.8.1"
serde = { version = "1.0.160", features = ["derive"] }
structstruck = "0.4.1"
toml = "0.7.3"
toml_edit = { version = "0.19.8", features = ["serde"] }
