[package]
name = "xtask"
version = "0.2.0"
edition = "2021"
description = "Archimedes helper tasks CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
clap = { version = "4.4.14", features = ["derive"] }
derive_more = "0.99.17"
glob = "0.3.1"
itertools = "0.12.0"
once_cell = "1.19.0"
percent-encoding = "2.3.1"
regex = "1.10.2"
serde = { version = "1.0.195", features = ["derive"] }
structstruck = "0.4.1"
toml = "0.8.8"
toml_edit = { version = "0.21.0", features = ["serde"] }
