[package]
name = "archimedes_crontab_parser"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "Crontab parsing package for archimedes, a high performance Rust/PostgreSQL job queue"
homepage = "https://docs.rs/archimedes_crontab_parser"
documentation = "https://docs.rs/archimedes_crontab_parser"
repository = "https://github.com/leo91000/archimedes/crates/crontab_parser"
keywords = []
categories = []
readme = "README.md"

[dependencies]
archimedes_crontab_types = { path = "../crontab_types" , version = "0.4.0" }
json5 = "0.4.1"
nom = "7.1.3"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_qs = "0.12.0"
thiserror = "1.0.40"
