[package]
name = "graphile_worker_crontab_parser"
version = "0.5.0"
edition = "2021"
license-file = "LICENSE.md"
description = "Crontab parsing package for graphile_worker, a high performance Rust/PostgreSQL job queue"
homepage = "https://docs.rs/graphile_worker_crontab_parser"
documentation = "https://docs.rs/graphile_worker_crontab_parser"
repository = "https://github.com/leo91000/graphile_worker/crates/crontab_parser"
keywords = []
categories = []
readme = "README.md"

[dependencies]
graphile_worker_crontab_types = { path = "../crontab_types", version = "0.5.0" }
json5 = { workspace = true }
nom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
thiserror = { workspace = true }
