[package]
name = "graphile_worker_crontab_runner"
version = "0.7.4"
edition = "2021"
license-file = "LICENSE.md"
description = "Crontab runner package for graphile worker, a high performance Rust/PostgreSQL job queue"
homepage = "https://docs.rs/graphile_worker_crontab_runner"
documentation = "https://docs.rs/graphile_worker_crontab_runner"
repository = "https://github.com/leo91000/graphile_worker_rs"
keywords = []
categories = []
readme = "README.md"

[features]
default = ["tls-rustls"]
tls-rustls = ["sqlx/tls-rustls"]
tls-native-tls = ["sqlx/tls-native-tls"]

[dependencies]
graphile_worker_crontab_types = { path = "../crontab_types", version = "0.5.14" }
graphile_worker_lifecycle_hooks = { path = "../lifecycle_hooks", version = "0.2.5" }
graphile_worker_shutdown_signal = { path = "../shutdown_signal", version = "0.3.11" }
chrono = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
getset = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
