[package]
name = "archimedes_crontab_types"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Crontab types package for archimedes, a high performance Rust/PostgreSQL job queue"
homepage = "https://docs.rs/archimedes_crontab_types"
documentation = "https://docs.rs/archimedes_crontab_types"
repository = "https://github.com/leo91000/archimedes/crates/crontab_types"
keywords = []
categories = []
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
getset = "0.1.2"
serde_json = "1.0.94"

[dev-dependencies]
anyhow = "1.0.70"
