[package]
name = "archimedes_crontab_types"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Crontab types package for archimedes, a high performance Rust/PostgreSQL job queue"
homepage = "https://docs.rs/archimedes_crontab_types"
documentation = "https://docs.rs/archimedes_crontab_types"
repository = "https://github.com/leo91000/archimedes/crates/crontab_types"
keywords = []
categories = []
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
getset = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
