[package]
name = "graphile_worker_crontab_types"
version = "0.5.0"
edition = "2021"
license-file = "LICENSE.md"
description = "Crontab types package for graphile_worker, a high performance Rust/PostgreSQL job queue"
homepage = "https://docs.rs/graphile_worker_crontab_types"
documentation = "https://docs.rs/graphile_worker_crontab_types"
repository = "https://github.com/leo91000/graphile_worker/crates/crontab_types"
keywords = []
categories = []
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
getset = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
