[package]
name = "graphile_worker_ctx"
version = "0.3.2"
edition = "2021"
license-file = "LICENSE.md"
description = "Worker Context package for graphile_worker, a high performance Rust/PostgreSQL job queue"
homepage = "https://docs.rs/graphile_worker_crontab_types"
documentation = "https://docs.rs/graphile_worker_crontab_types"
repository = "https://github.com/leo91000/graphile_worker/crates/crontab_types"
keywords = []
categories = []
readme = "README.md"

[dependencies]
graphile_worker_job = { path = "../job", version = "0.1.9" }
graphile_worker_extensions = { path = "../extensions", version = "0.1.5" }
graphile_worker_task_details = { path = "../task_details", version = "0.1.0" }
getset.workspace = true
serde_json.workspace = true
sqlx.workspace = true
