[package]
name = "graphile_worker_ctx"
version = "0.4.3"
edition = "2021"
license-file = "LICENSE.md"
description = "Worker Context package for graphile_worker, a high performance Rust/PostgreSQL job queue"
homepage = "https://docs.rs/graphile_worker_crontab_types"
documentation = "https://docs.rs/graphile_worker_crontab_types"
repository = "https://github.com/leo91000/graphile_worker_rs"
keywords = []
categories = []
readme = "README.md"

[dependencies]
graphile_worker_job = { path = "../job", version = "0.1.13" }
graphile_worker_extensions = { path = "../extensions", version = "0.1.6" }
graphile_worker_task_details = { path = "../task_details", version = "0.1.2" }
derive_builder.workspace = true
getset.workspace = true
serde_json.workspace = true
sqlx.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
