[package]
name = "graphile_worker_extensions"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE.md"
description = "Extensions package for graphile_worker, a high performance Rust/PostgreSQL job queue"
homepage = "https://docs.rs/graphile_worker_crontab_types"
documentation = "https://docs.rs/graphile_worker_crontab_types"
repository = "https://github.com/leo91000/graphile_worker/crates/crontab_types"
keywords = []
categories = []
readme = "README.md"
