[package]
name = "graphile_worker_admin_api"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Shared Graphile Worker admin API contracts and queries"
homepage = "https://docs.rs/graphile_worker"
documentation = "https://docs.rs/graphile_worker"
repository = "https://github.com/leo91000/graphile_worker_rs"
keywords = ["jobs", "queue", "postgres", "admin"]
categories = ["web-programming", "database"]

[features]
default = []
sqlx = ["dep:sqlx"]

[dependencies]
chrono.workspace = true
graphile_worker_database.workspace = true
indoc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sqlx = { workspace = true, optional = true, features = ["postgres"] }

[dev-dependencies]
sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
