[package]
name = "graphile_worker_admin_ui_client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Leptos WASM client for the embedded graphile_worker admin UI"
homepage = "https://docs.rs/graphile_worker"
documentation = "https://docs.rs/graphile_worker"
repository = "https://github.com/leo91000/graphile_worker_rs"
keywords = ["jobs", "queue", "postgres", "admin", "leptos"]
categories = ["web-programming", "database"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6.0", features = ["json"] }
gloo-timers = "0.3.0"
js-sys = "=0.3.98"
leptos = { version = "0.8.19", features = ["csr"] }
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "=0.4.71"
web-sys = { version = "=0.3.98", features = [
  "Clipboard",
  "ClipboardEvent",
  "DataTransfer",
  "Document",
  "DomStringMap",
  "DomTokenList",
  "Element",
  "Event",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "Location",
  "MediaQueryList",
  "Navigator",
  "Storage",
  "Window",
] }
