[package]
name = "graphile_worker_admin_ui_client"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Leptos WASM client for the embedded graphile_worker admin UI"
homepage = "https://docs.rs/graphile_worker"
documentation = "https://docs.rs/graphile_worker"
repository = "https://github.com/leo91000/graphile_worker_rs"
keywords = ["jobs", "queue", "postgres", "admin", "leptos"]
categories = ["web-programming", "database"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono.workspace = true
futures.workspace = true
graphile_worker_admin_api.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { workspace = true, features = ["json"] }
gloo-timers.workspace = true
js-sys.workspace = true
leptos = { workspace = true, features = ["csr"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
  "Clipboard",
  "ClipboardEvent",
  "DataTransfer",
  "Document",
  "DomStringMap",
  "DomTokenList",
  "Element",
  "Event",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "Location",
  "MediaQueryList",
  "Navigator",
  "Storage",
  "Window",
] }
