[package]
name = "graphile_worker_admin_ui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Embedded Leptos admin UI for graphile_worker"
homepage = "https://docs.rs/graphile_worker"
documentation = "https://docs.rs/graphile_worker"
repository = "https://github.com/leo91000/graphile_worker_rs"
keywords = ["jobs", "queue", "postgres", "admin", "leptos"]
categories = ["web-programming", "database"]
include = [
  "/Cargo.toml",
  "/assets/**",
  "/build.rs",
  "/package-lock.json",
  "/package.json",
  "/prebuilt/**",
  "/src/**",
  "/tailwind.config.cjs",
]

[dependencies]
axum = "0.8.9"
base64 = "0.22.1"
chrono.workspace = true
graphile_worker = { path = "../..", version = "0.12.0", default-features = false, features = [
  "driver-sqlx",
  "runtime-tokio",
  "tls-rustls",
] }
hex = "0.4.3"
indoc.workspace = true
leptos = { version = "0.8.19", features = ["ssr"] }
rand = "0.10.1"
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["net"] }
tracing.workspace = true

[build-dependencies]
graphile_worker_admin_ui_client = { path = "../graphile-worker-admin-ui-client", version = "0.1.0" }
