[package]
name = "graphile_worker_admin_ui"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Embedded Leptos admin UI for graphile_worker"
homepage = "https://docs.rs/graphile_worker"
documentation = "https://docs.rs/graphile_worker"
repository = "https://github.com/leo91000/graphile_worker_rs"
keywords = ["jobs", "queue", "postgres", "admin", "leptos"]
categories = ["web-programming", "database"]
include = [
  "/Cargo.toml",
  "/assets/**",
  "/build/**",
  "/build.rs",
  "/package-lock.json",
  "/package.json",
  "/prebuilt/**",
  "/src/**",
  "/tailwind.config.cjs",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum.workspace = true
base64.workspace = true
chrono.workspace = true
graphile_worker = { workspace = true, features = [
  "driver-sqlx",
  "runtime-tokio",
  "tls-rustls",
] }
graphile_worker_admin_api = { workspace = true, features = ["sqlx"] }
hex.workspace = true
indoc.workspace = true
leptos = { workspace = true, features = ["ssr"] }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls"] }
subtle.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net"] }
tracing.workspace = true
