[package]
name = "graphile_worker_crontab_runner"
version = "0.7.9"
edition = "2021"
license-file = "LICENSE.md"
description = "Crontab runner package for graphile worker, a high performance Rust/PostgreSQL job queue"
homepage = "https://docs.rs/graphile_worker_crontab_runner"
documentation = "https://docs.rs/graphile_worker_crontab_runner"
repository = "https://github.com/leo91000/graphile_worker_rs"
keywords = []
categories = []
readme = "README.md"

[features]
default = ["runtime-tokio", "tls-rustls", "driver-sqlx"]
runtime-tokio = [
  "graphile_worker_database/runtime-tokio",
  "sqlx?/runtime-tokio",
  "graphile_worker_runtime/runtime-tokio",
  "graphile_worker_lifecycle_hooks/runtime-tokio",
  "graphile_worker_shutdown_signal/runtime-tokio",
]
runtime-async-std = [
  "graphile_worker_database/runtime-async-std",
  "sqlx?/runtime-async-std",
  "graphile_worker_runtime/runtime-async-std",
  "graphile_worker_lifecycle_hooks/runtime-async-std",
  "graphile_worker_shutdown_signal/runtime-async-std",
]
tls-rustls = ["graphile_worker_database/tls-rustls", "sqlx?/tls-rustls"]
tls-native-tls = ["graphile_worker_database/tls-native-tls", "sqlx?/tls-native-tls"]
driver-sqlx = ["graphile_worker_database/driver-sqlx", "sqlx"]
driver-tokio-postgres = ["graphile_worker_database/driver-tokio-postgres"]

[dependencies]
graphile_worker_crontab_types.workspace = true
graphile_worker_lifecycle_hooks.workspace = true
graphile_worker_shutdown_signal.workspace = true
graphile_worker_runtime.workspace = true
graphile_worker_database.workspace = true
chrono = { workspace = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
getset = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
indoc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
