[package]
name = "graphile_worker_ctx"
version = "0.5.2"
edition = "2021"
license-file = "LICENSE.md"
description = "Worker Context package for graphile_worker, a high performance Rust/PostgreSQL job queue"
homepage = "https://docs.rs/graphile_worker_crontab_types"
documentation = "https://docs.rs/graphile_worker_crontab_types"
repository = "https://github.com/leo91000/graphile_worker_rs"
keywords = []
categories = []
readme = "README.md"

[dependencies]
graphile_worker_job.workspace = true
graphile_worker_extensions.workspace = true
graphile_worker_task_details.workspace = true
graphile_worker_database.workspace = true
derive_builder.workspace = true
getset.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }

[features]
default = ["runtime-tokio", "driver-sqlx"]
runtime-tokio = [
  "graphile_worker_database/runtime-tokio",
  "sqlx?/runtime-tokio",
  "graphile_worker_job/runtime-tokio",
  "graphile_worker_task_details/runtime-tokio",
]
runtime-async-std = [
  "graphile_worker_database/runtime-async-std",
  "sqlx?/runtime-async-std",
  "graphile_worker_job/runtime-async-std",
  "graphile_worker_task_details/runtime-async-std",
]
driver-sqlx = ["graphile_worker_database/driver-sqlx", "sqlx"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
