[package]
name = "graphile_worker_database"
version = "0.1.7"
edition = "2021"
license = "MIT"
description = "Database driver abstraction for graphile_worker"
homepage = "https://docs.rs/graphile_worker"
documentation = "https://docs.rs/graphile_worker"
repository = "https://github.com/leo91000/graphile_worker_rs"
keywords = ["jobs", "queue", "postgres", "worker"]
categories = ["asynchronous", "database"]
readme = "README.md"

[dependencies]
chrono.workspace = true
deadpool-postgres = { workspace = true, optional = true }
futures.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, optional = true, features = ["rt", "sync"] }
tokio-postgres = { workspace = true, optional = true, features = [
  "array-impls",
  "with-chrono-0_4",
  "with-serde_json-1",
] }
tokio-stream = { workspace = true, optional = true, features = ["sync"] }

[features]
default = ["driver-sqlx"]
driver-sqlx = ["sqlx"]
driver-tokio-postgres = [
  "deadpool-postgres",
  "tokio",
  "tokio-postgres/runtime",
  "tokio-stream",
]
runtime-tokio = [
  "sqlx?/runtime-tokio",
  "tokio-postgres?/runtime",
]
runtime-async-std = ["sqlx?/runtime-async-std"]
tls-native-tls = ["sqlx?/tls-native-tls"]
tls-rustls = ["sqlx?/tls-rustls"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
