[package]
name = "graphile_worker_job"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Job package for graphile_worker, a high performance Rust/PostgreSQL job queue"
homepage = "https://docs.rs/graphile_worker_job"
documentation = "https://docs.rs/graphile_worker_job"
repository = "https://github.com/leo91000/graphile_worker_rs"
keywords = []
categories = []
readme = "README.md"

[dependencies]
getset.workspace = true
derive_builder.workspace = true
chrono.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }

[features]
default = ["runtime-tokio", "driver-sqlx"]
runtime-tokio = ["sqlx?/runtime-tokio"]
runtime-async-std = ["sqlx?/runtime-async-std"]
driver-sqlx = ["sqlx"]
