[package]
name = "graphile_worker_migrations_macros"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Proc macros for graphile_worker_migrations"
homepage = "https://docs.rs/graphile_worker_migrations"
documentation = "https://docs.rs/graphile_worker_migrations"
repository = "https://github.com/leo91000/graphile_worker_rs"
keywords = []
categories = []

[lib]
proc-macro = true

[dependencies]
graphile_worker_migrations_core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
