[package]
name = "graphile_worker_migrations"
version = "0.4.17"
edition = "2021"
license-file = "LICENSE.md"
description = "Migrations package for graphile_worker, a high performance Rust/PostgreSQL job queue"
homepage = "https://docs.rs/graphile_worker_migrations"
documentation = "https://docs.rs/graphile_worker_migrations"
repository = "https://github.com/leo91000/graphile_worker_rs"
keywords = []
categories = []
readme = "README.md"

[features]
default = ["runtime-tokio", "tls-rustls", "driver-sqlx"]
runtime-tokio = ["graphile_worker_database/runtime-tokio", "sqlx?/runtime-tokio"]
runtime-async-std = ["graphile_worker_database/runtime-async-std", "sqlx?/runtime-async-std"]
tls-rustls = ["graphile_worker_database/tls-rustls", "sqlx?/tls-rustls"]
tls-native-tls = ["graphile_worker_database/tls-native-tls", "sqlx?/tls-native-tls"]
driver-sqlx = ["graphile_worker_database/driver-sqlx", "sqlx"]
driver-tokio-postgres = ["graphile_worker_database/driver-tokio-postgres"]

[dependencies]
graphile_worker_database.workspace = true
graphile_worker_migrations_core.workspace = true
graphile_worker_migrations_macros.workspace = true
sqlx = { workspace = true, optional = true }
tracing.workspace = true
indoc.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true }
